# ComfyUI-Saveaswebp

./: README.md  Save_as_webp.py  __init__.py  pyproject.toml
webpinfo/: webpinfo.js
