[project]
name = "comfyui-saveaswebp"
description = "Save a picture as Webp file in Comfy + Workflow loading"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Kaharos94/ComfyUI-Saveaswebp"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Saveaswebp"
Icon = ""
